// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (a) contract with a draft (the Save draft / Sign & send row) 1`] = `
{
  "lines": 926,
  "sha256": "7187942946247da575d29ca83316508f3c4bb539ef41c177077c7403fccbeff5",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b1) daily-report, new report, jobsite 124 Park Slope (wttr answers) 1`] = `
{
  "lines": 1159,
  "sha256": "84840e40425a4094afa216c058e74672feaf19a086f40d145ccf2d322e9df2c1",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b2) daily-report, new report, location 'United States' 1`] = `
{
  "lines": 1159,
  "sha256": "5d000890aceebf7707162ec537a7b4e0ad0ded454934aaf14b989d334ec07fd5",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c1) construction-ai, tier enterprise (Code Check) 1`] = `
{
  "lines": 831,
  "sha256": "3044fdb7dabbbbca5af5c2d2cdadbf61bcde34e19423751e781fc3eed9f7fdc7",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c2) construction-ai, tier enterprise (Project Roadmap) 1`] = `
{
  "lines": 796,
  "sha256": "5a996653c1e543c1f2cf1dc17a7186b847134a74e2aee53202733ccd39ccddb3",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c3) construction-ai, tier pro (Code Check) 1`] = `
{
  "lines": 834,
  "sha256": "10e56c6444c01915b842907f8e11596cf308654b9af609cbadc712c1a500283c",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (d) onboarding-paywall 1`] = `
{
  "lines": 442,
  "sha256": "58ee00036870ebf610896d0deef55d7bf40c048e47e4570da529b5e58fb3a5cd",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (e) dev-ar-measure 1`] = `
{
  "lines": 2060,
  "sha256": "278940ec431c2d93a8e744436c5864a72b0a450d54bd07efb130957879a4319a",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (f) WeatherRescheduleModal, fully simulated, mounted alone 1`] = `
{
  "lines": 80,
  "sha256": "0d8b5fcb91d798f8f6c43a635a88a3794e2b6220609159c87be4dde02e9768ae",
}
`;
